Connect original activity

--- a/web/src/main/webapp/app/timeline/activities/activities.component.html
+++ b/web/src/main/webapp/app/timeline/activities/activities.component.html
@@ -190,7 +190,9 @@
                                             </div>
                                             <p class="">{{activity.startDate}}</p>
                                             <div class="text-dark-lt font-bold text-lg">
-                                                <p>{{activity.title}}</p>
+                                                <a href="https://strava.com">
+                                                    <p>{{activity.title}}</p>
+                                                </a>
                                             </div>
                                         </div>
                                         <!--<div class="panel-body pull-in b-t b-light">-->
