--- a/web/src/main/webapp/app/account/settings/settings.component.html
+++ b/web/src/main/webapp/app/account/settings/settings.component.html
@@ -100,7 +100,7 @@
                 </div>
                 <div class="form-group">
                     <label for="measureTypeKey" jhiTranslate="settings.form.units">Units & Measurements</label>
-                    <select class="form-control" id="measureTypeKey" name="measureTypeKey" [(ngModel)]="settingsAccount.metricSystem">
+                    <select class="form-control" id="measureTypeKey" name="measureTypeKey" [(ngModel)]="settingsAccount.metricSystemType">
                         <option *ngFor="let metricSystem of metricSystems" [value]="metricSystem.type">{{metricSystem.text}}</option>
                     </select>
                 </div>
