tracker system url for UI

--- a/web/src/main/webapp/app/timeline/activities/activities.component.html
+++ b/web/src/main/webapp/app/timeline/activities/activities.component.html
@@ -190,7 +190,7 @@
                                             </div>
                                             <p class="">{{activity.startDate}}</p>
                                             <div class="text-dark-lt font-bold text-lg">
-                                                <a href="{{activity.originalUrl}}">
+                                                <a href="{{activity.activityUrl}}">
                                                     <p>{{activity.title}}</p>
                                                 </a>
                                             </div>
