--- a/web/src/main/webapp/app/timeline/activities/activities.component.html
+++ b/web/src/main/webapp/app/timeline/activities/activities.component.html
@@ -8,7 +8,7 @@
         <!-- .col -->
         <div class="col w-lg bg-light dk b-r bg-auto" id="aside">
             <div class="wrapper b-b">
-                <h3 class="m-n font-thin" jhiTranslate="timeline.manual.title">Add Activity</h3>
+                <h3 class="m-n font-thin" jhiTranslate="timeline.manual.title">Add Activity123</h3>
             </div>
 
             <div class="wrapper" [ngSwitch]="isMetric()">
@@ -186,7 +186,7 @@
                                         <span class="arrow left pull-up"></span>
                                         <div class=" m-b-md">
                                             <div class="text-dark-lt font-bold text-md">
-                                                <p>{{activity.firstAndLastName}}</p>
+                                                <p >{{activity.firstAndLastName}}</p>
                                             </div>
                                             <p class="">{{activity.startDate}}</p>
                                             <div class="text-dark-lt font-bold text-lg">
